# motor-board

./: .gitignore  CMakeLists.txt  platformio.ini  run.sh
mock/: can.cpp  main.cpp  print.cpp  pwm.cpp  tcpcan.h
mock/firmware/: adc_etc.cpp  motor_board.cpp  pwm.cpp  xbar.cpp
src/: adc_config.h  adc_isr.cpp  adc_isr.h  adc_settings.h  assert_err.cpp  control.cpp  control.h  defaults.h  error_level_range_check.h  feedthrough_mosfet.h  handle_heartbeat.cpp  main.cpp  precharge_mosfet.h  print.cpp  pwm_config.h  sdc_brake.cpp  sdc_brake.h  xbar_config.h
src/can/: can.cpp  can.hpp
src/canzero/: canzero.cpp  canzero.h
src/firmware/: Accelermometer.cpp  Accelerometer.h  adc_etc.cpp  adc_etc.h  adc_etc.hpp  adc_mux.cpp  adc_mux.hpp  ain_scheduler.h  motor_board.cpp  motor_board.h  motor_pwm.cpp  motor_pwm.h  motor_pwm.hpp  mux_scheduler.h  pinout.h  pwm.cpp  pwm.h  pwm.hpp  xbar.cpp  xbar.cpp.dep  xbar.hpp
src/fsm/: accelerate_state.cpp  control_state.cpp  decelerate_state.cpp  error_handling.cpp  error_handling.h  error_state.cpp  fsm.cpp  fsm.h  idle.cpp  idle_state.cpp  init.cpp  init_state.cpp  manual_state.cpp  precharge.cpp  precharge_state.cpp  ready.cpp  ready_state.cpp  running.cpp  start.cpp  start_state.cpp  states.h  states.hpp  stop.cpp  stop_state.cpp
src/fsm/states/: arming45.cpp  control.cpp  disarming45.cpp  idle.cpp  init.cpp  precharge.cpp  ready.cpp
src/sensors/: accelerometer.cpp  accelerometer.h  ext_ntcs.cpp  ext_ntcs.h  mcu_temperature.cpp  mcu_temperature.h  on_board_ntcs.cpp  on_board_ntcs.h  phase_current.cpp  phase_current.h  vdc.cpp  vdc.h  vdc_voltage.cpp  vdc_voltage.hpp
src/sensors/formula/: current_sense.h  isolated_voltage.h  ntc_beta.h  ptx.h  voltage_divider.h
src/util/: boxcar.h  circular_queue.h  csv.h  ema.h  heap.h  lina.h  metrics.h  periodic_scheduler.h  pool_allocator.h  rectangle_integral.h  timeout.h  timestamp.h  timing.h  trapazoidal_integral.h
